*** empty log message ***

--- a/help/general/menubar.html
+++ b/help/general/menubar.html
@@ -30,6 +30,9 @@
     <h2>Plugins</h2>
     This menu is not present by default. This menu will only be shown if you have installed additional (custom) plugins
 
+    <h2>Web Server</h2>
+    This menu is not present by default. This menu will only be shown if you have installed the web module. Using this menu the web server settings can be changed and the web server can be started.
+
     <h2>Help</b></h2>
     Contains a link to the about dialog, the tip of the day and the help
 
