--- a/help/settings/colors.html
+++ b/help/settings/colors.html
@@ -3,8 +3,8 @@
         <link href="../datacrow_help.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>View Colors</h1>
+    <h1>Selection Color</h1>
 
-    Change the display colors, including the selection color and the even and odd color used by the views to display the items.
+    Change the color used to indicate an item has been selected.
   </body>
 </html>
