--- a/help/settings/fields.html
+++ b/help/settings/fields.html
@@ -5,21 +5,19 @@
   <body>
     
     <h1>Field Settings</h1>
-
-	<h2>Display properties</h2>
-    Via this dialog the order of the fields and which fields are displayed can be indicated. Fields that are not displayed will still be used for data validation (for example, for enforcing required fields) and are still updated when you use media import or online updates.
-
-    <h2>Marking a field as required</h2>
-    You can mark a field as a required field. This field must always be filled when saving. The item  will only be saved when all the required fields have been filled
+    Via this dialog the order of the fields and which fields are used can be indicated. 
 
     <h2>Renaming a field</h2>
-    The label of each field can be changed. On the left the orginal label name is displayed. This is the default value. A new label value can be entered in the "label" column. Press "save changes" to save and apply the field settings.
+    The label of each field can be changed. On the left the original label name is displayed. This is the default value. A new label value can be entered in the "label" column. Press "save changes" to save and apply the field settings.
 
-    <h2>Disabled vs Invisible</h2>
-    There are two options for each field, enabled (yes, no) and visible (yes, no). Setting a field to invisible will still allow Data Crow to update this field using online updates. Setting a field to disabled will not only hide the field but also disallows Data Crow to use this field. Note that for one field the enabled setting is completely ignored, namely for the ID field.
+    <h2>Marking a field as required</h2>
+    You can mark a field as a required field. This field must always be filled when saving. The item  will only be saved when all the required fields have been filled. Furthermore the combination of the required fields will be used to check if the item already exists <a href="../settings/general.html">(more about this)</a>.
+
+    <h2>Disabled</h2>
+    Setting a field to disabled will not only hide the field but also disallows Data Crow to use this field. Note that for one field the enabled setting is completely ignored, namely for the ID field.
 
     <h2>Descriptive</h2>
-    When a field is marked as descriptive (or a combination of several fields) the value of this field is used to represent the items. The value displayed in the card view is for example based on this setting.
+    When a field is marked as descriptive (or a combination of several fields) the value of this field is used to represent the items.
 
     <h2>Adding your own fields</h2>
     There are 5 fields which are by default disabled. There are 2 short text fields, one long text (4000+ characters) and 2 numeric fields. These can be activated by checking the enabled checkbox. You can rename them to anything you like (see previous paragraph). Don't forget to make them visible!
