--- a/help/settings/quickview.html
+++ b/help/settings/quickview.html
@@ -18,5 +18,8 @@
     <h2>Order</h2>
     To move a field select it in the table and use the arrow buttons to move the field up or down.
 
+    <h2>Background color</h2>
+    Here you can change the background color of the description panel.
+
   </body>
 </html>
