--- a/help/settings/webfields.html
+++ b/help/settings/webfields.html
@@ -25,6 +25,9 @@
     <h2>Link to details</h2> 
     When set the field becomes a clickable link. The link opens the item
     detail page.
+    
+    <h2>Quick search</h2> 
+    Marking a field as a quick search field will add this field to search area. The search area is displayed in the lower left corner of the web interface.
 
   </body>
 </html>
