--- a/help/tools/backup_restore.html
+++ b/help/tools/backup_restore.html
@@ -12,6 +12,8 @@
     Select a target directory where Data Crow can write the backup file and press "Backup". Once done all your settings, modules, images and the database will have been backed up!
 
     <h2>Restoring a backup</h2>
+    First you have to indicate what should be restored from the backup. In most cases it will be enough to only restore the database. Optionally you can select to restore the modules and report templates. This is only needed when the backup contains custom or modified modules and/or reports. 
+    <br><br>
     To restore a backup, browse for the backup file and press "Restore". Data Crow will restore the database (overwriting the current!), your images and all yours settings. After the restore has finished Data Crow is up and running on your restored database, using the  restored settings.
 
   </body>
