--- a/help/tools/fileinformationimport.html
+++ b/help/tools/fileinformationimport.html
@@ -18,8 +18,8 @@
 
 	<h1>Settings</h1>
 
-	<h2>Location Identifier</h2>
-	The name of the CD/DVD or the location where the CD is stored. This value will be set on the location field of each imported item.
+	<h2>Container</h2>
+	Select the container for the imported items. A container can be anything, for example a CD suitcase.
 
 	<h2>Storage Medium</h2>
 	Optionally you can select the Storage Media type on which the to be imported data resides. The storage medium indicates on which type of media the item is stored (CD/DVD/etc.).
@@ -50,10 +50,10 @@
 	(example ../../Abba/Abba Gold).
 
 
-	<h1>Online Service Configuration</h1>
+	<h1>Online Search</h1>
 	This panel will only appear if the module supports the use of online services. An online service can be used to retrieve additional information such as covers. You can decide whether you want to use an online service by checking the "Use online service" box. If selected you can specify the online service to be used..
 
-	<h2>Online Service Settings</h2>
+	<h2>Use Online Service Settings to retrieve missing information</h2>
 	This panel will only appear if the module supports the use of online services. These settings correspond to the settings as found in a normal online search. Please read <a href="../onlinesearch/onlinesearch.html">here</a> for more information.
 
 
@@ -65,7 +65,7 @@
 	<h2>Recursive directory search</h2>
 	Allow local art to be found in one of the sub directories of the currently imported item.
 	
-	<h2>Keywords</h2>
+	<h2>Search for art using keywords</h2>
 	Specify the keywords which a picture's filename should contain for it to be considered local art. 
 	The keywords have to be entered comma separated.
 
