--- a/help/tools/mass_update.html
+++ b/help/tools/mass_update.html
@@ -8,7 +8,9 @@
 	
 	<br><br>
 	A combination of file re-parsing and online searching can be used to update all the items shown in the view.
-	
+
+    <h2>Settings<h2>
+    Select which items will be updated. Available options are: "all items currently shown in the view" and "update selected items only".
 
 	<h2>Online Service Configuration</h2>
 	The Online service configuration is the same as for the normal online search functionality. The settings and options are explained <a href="../onlinesearch/onlinesearch.html">here</a>.
