*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -51,6 +51,11 @@
 		</p>
 
 
+        <h2>31/08/2008 ~ Data Crow 3.4 has been released</h2>
+        <p>
+        This is the production release of the 3.4 beta version.
+        </p>
+
 
         <h2>26/08/2008 ~ Data Crow 3.4 beta has been released</h2>
         <p>
