--- a/homepage/download.html
+++ b/homepage/download.html
@@ -64,6 +64,10 @@
         <li>Web module: Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1.0_full_version_installer.zip" target="information">1.0</a></li>
         <li>Web module: Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1.0_full_version_windows_installer.zip" target="information">1.0</a></li>
 
+  
+        <h2>Patches</h2>
+        <li>Loan functionality fix: <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/patch_3_4_0_1.zip" target="information">3.4.0.1</a></li>
+        
 
         <h2>Upgrading</h2>
         <p>
