*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -50,6 +50,10 @@
 			This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 		</p>
 
+        <h2>08/09/2008 ~ Patch 3.4.0.1 has been released</h2>
+        <p>
+        This patch fixes the loan functionality.
+        </p>
 
         <h2>31/08/2008 ~ Data Crow 3.4 has been released</h2>
         <p>
