*** empty log message ***

--- a/help/loan/loan.html
+++ b/help/loan/loan.html
@@ -6,7 +6,8 @@
 
     <h1>Loan administration</h1>
 
-    Loans can be administrated via the right-click menu on pressing "Loan Administration" or via the "Loan" tab of the item form. A history of loans is maintained.
+    Loans can be administered via the right-click menu on pressing "Loan Administration" or via the "Loan" tab of the item form. A history of loans is maintained.
+    You can get an overview of your loans by using the "Loan Information" utility from the "Administration" menu. The contact person form also contains a separate tab showing his lend items.
 
 	<h2>Persons</h2>
 	For the loan administration to work, you need to register contacts in the contacts module. The registration of contacts works just the same as the registration of items in the other modules
