*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -50,6 +50,19 @@
 			This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 		</p>
 
+        <h2>28/09/2008 ~ Data Crow 3.4.1 has been released</h2>
+        <p>
+        This release upgrades the existing loan functionality. A due date has been added and the
+        loan information can now be viewed in a specialized dialog.
+        Items now show which items are using them. For example: the actor form has a separate tab to show in which
+        movies they have performed.<br />
+        The FreeDB support has been re-added. It was present in older version and has now be
+        delivered as a separate plugin (with limited support). <br />
+        The tools menu has been split into an administration and a tools menu. The administration
+        menu can be used to maintain genres and the likes and to view the loan information.
+        </p>
+
+
         <h2>08/09/2008 ~ Patch 3.4.0.1 has been released</h2>
         <p>
         This patch fixes the loan functionality.
