*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -27,23 +27,25 @@
 		<center>
 			<table>
 			<tr>
-				<td><a href="index.html">Home</a></td>
-				<td> | </td>
-				<td><a href="download.html">Download</a></td>
-				<td> | </td>
-				<td><a href="screenshots.html">Screenshots</a></td>
-				<td> | </td>
-				<td><a href="faq.html">FAQ</a></td>
-				<td> | </td>
+                <td><a href="index.html">Home</a></td>
+                <td> | </td>
+                <td><a href="donate.html">Donate</a></td>
+                <td> | </td>
+                <td><a href="download.html">Download</a></td>
+                <td> | </td>
+                <td><a href="screenshots.html">Screenshots</a></td>
+                <td> | </td>
+                <td><a href="faq.html">FAQ</a></td>
+                <td> | </td>
                 <td><a href="history.html">History</a></td>
                 <td> | </td>
-				<td><a href="links.html">Links</a></td>
-				<td> | </td>
-				<td><a href="news.html">News</a></td>
-				<td> | </td>
-				<td><a href="contact.html">Contact</a></td>
-				<td> | </td>
-				<td><a href="reviews.html">Reviews</a></td>
+                <td><a href="links.html">Links</a></td>
+                <td> | </td>
+                <td><a href="news.html">News</a></td>
+                <td> | </td>
+                <td><a href="contact.html">Contact</a></td>
+                <td> | </td>
+                <td><a href="reviews.html">Reviews</a></td>
 			</tr>
 			</table>
 		</center>
