--- a/homepage/news.html
+++ b/homepage/news.html
@@ -24,6 +24,8 @@
 			<tr>
                 <td><a href="index.html">Home</a></td>
                 <td> | </td>
+                <td><a href="donate.html">Donate</a></td>
+                <td> | </td>
                 <td><a href="download.html">Download</a></td>
                 <td> | </td>
                 <td><a href="screenshots.html">Screenshots</a></td>
@@ -52,14 +54,10 @@
 
         <h2>28/09/2008 ~ Data Crow 3.4.1 has been released</h2>
         <p>
-        This release upgrades the existing loan functionality. A due date has been added and the
-        loan information can now be viewed in a specialized dialog.
-        Items now show which items are using them. For example: the actor form has a separate tab to show in which
-        movies they have performed.<br />
-        The FreeDB support has been re-added. It was present in older version and has now be
-        delivered as a separate plugin (with limited support). <br />
-        The tools menu has been split into an administration and a tools menu. The administration
-        menu can be used to maintain genres and the likes and to view the loan information.
+Data Crow 3.4.1 upgrades the existing loan functionality. A due date has been added and the loan information can now be viewed in a specialized dialog.
+Relationships to an item are now shown in the item tab. For example: the actor form has a separate tab to show in which movies they have performed.
+The FreeDB support has been re-added. It was present in older versions and has now been delivered as a separate plugin (with limited support).
+The tools menu has been split into an administration and a tools menu. The administration menu can be used to maintain genres and the likes and to view the loan information.
         </p>
 
 
