--- a/homepage/screenshots.html
+++ b/homepage/screenshots.html
@@ -25,6 +25,8 @@
 			<tr>
                 <td><a href="index.html">Home</a></td>
                 <td> | </td>
+                <td><a href="donate.html">Donate</a></td>
+                <td> | </td>
                 <td><a href="download.html">Download</a></td>
                 <td> | </td>
                 <td><a href="screenshots.html">Screenshots</a></td>
