*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -52,6 +52,13 @@
 			This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 		</p>
 
+        <h2>02/10/2008 ~ Data Crow 3.4.2 has been released</h2>
+        <p>
+        This version of Data Crow improves the online search capabilities and the Data Crow framework as a whole;
+        bugs have been fixed and minor improvements have been made where needed.
+        </p>
+
+
         <h2>28/09/2008 ~ Data Crow 3.4.1 has been released</h2>
         <p>
 Data Crow 3.4.1 upgrades the existing loan functionality. A due date has been added and the loan information can now be viewed in a specialized dialog.
