--- a/homepage/download.html
+++ b/homepage/download.html
@@ -59,12 +59,13 @@
 
 		<h2>Production version</h2>
 
-        <li>Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_2_full_version_zipped.zip" target="information">3.4.2</a></li>
-        <li>Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_2_full_version_installer.zip" target="information">3.4.2</a></li>
-        <li>Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_2_full_version_windows_installer.zip" target="information">3.4.2</a></li>
-        <li>Source code: <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_2_source.zip" target="information">3.4.2</a></li>
-        <li>Web module: Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1.0_full_version_installer.zip" target="information">1.0</a></li>
-        <li>Web module: Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1.0_full_version_windows_installer.zip" target="information">1.0</a></li>
+        <li>Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_3_zipped.zip" target="information">3.4.3</a></li>
+        <li>Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_3_installer.zip" target="information">3.4.3</a></li>
+        <li>Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_3_installer.exe" target="information">3.4.3</a></li>
+        <li>Source code: <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_3_source.zip" target="information">3.4.3</a></li>
+        <li>Web module: Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_1_zipped.zip" target="information">1.1</a></li>
+        <li>Web module: Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_1_installer.zip" target="information">1.1</a></li>
+        <li>Web module: Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_1_installer.exe" target="information">1.1</a></li>
 
 
         <h2>Upgrading</h2>
