*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -52,6 +52,11 @@
 			This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 		</p>
 
+
+                <h2>08/10/2008 ~ Data Crow 3.4.3 has been released</h2>
+                <p>
+                This release contains for the most part bug fixes but also some minor changes.</p>
+
         <h2>02/10/2008 ~ Data Crow 3.4.2 has been released</h2>
         <p>
         This version of Data Crow improves the online search capabilities and the Data Crow framework as a whole;
