*** empty log message ***

--- a/homepage/download.html
+++ b/homepage/download.html
@@ -66,6 +66,7 @@
         <li>Web module: Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_1_zipped.zip" target="information">1.1</a></li>
         <li>Web module: Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_1_installer.zip" target="information">1.1</a></li>
         <li>Web module: Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_1_installer.exe" target="information">1.1</a></li>
+        <li>Standard Services Pack: <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/standard_services_pack_20081109.zip" target="information">20081109</a></li>
 
 
         <h2>Upgrading</h2>
