*** empty log message ***

--- a/help/settings/locale.html
+++ b/help/settings/locale.html
@@ -5,6 +5,9 @@
   <body>
     <h1>Locale Settings</h1>
 
+    <h2>Language</h2>
+    Select the language of your choice. A restart is advised for the selection to become fully active. 
+
 	<h2>Decimal Grouping Symbol</h2>
 	In the value 1,000,000.00 the "," sign is the decimal grouping symbol.
 
