*** empty log message ***

--- a/help/general/starting_datacrow.html
+++ b/help/general/starting_datacrow.html
@@ -15,6 +15,13 @@
 	
 	<h2>Using a different database</h2>
 	To create an additional database: -db:&lt;database name&gt;.
+	
+	<h2>Allowing Data Crow to use more memory</h2>
+	To allow Data Crow access to more memory start Data Crow with the following parameters: <br>
+	Java -Xmx512m -jar datacrow.jar
+	
+	<h2>Starting the web server</h2>
+	You can start the web server without opening the main application by using the -webserver parameter. 
 
 </body>
 </html>
