--- a/help/settings/general.html
+++ b/help/settings/general.html
@@ -6,6 +6,12 @@
   
     <h1>General settings</h1>
 
+    <h2>Sorting method for persons</h2>
+    Define here how persons should be sorted. The default order will sort persons in the order they have been saved.
+    
+    <h2>Default Display format for the persons name</h2>
+    Define how the name of persons should be displayed by default.
+
 	<h2>Check for value uniqueness upon saving</h2>
 	Data Crow will check if the item is unique before it is saved. Uniqueness is determined by the required field values. If the item is not unique it will not be saved and a message will be displayed.<br>
 	This option is enabled by default and I do not recommend turning it off
