--- a/homepage/news.html
+++ b/homepage/news.html
@@ -53,6 +53,16 @@
 		</p>
 
 
+                <h2>20/12/2008 ~ Data Crow 3.4.4 has been released</h2>
+                <p>
+                The product has been translated to German (thanks to Klaus Lassleben) and Dutch. Improvements have been made
+                to the resource editor (better UTF8 support and the ability to translate module names and fields).
+                Of course there are again the necessary bug fixes. Please note that a new version of the web module has been made available (1.2). This
+                version contains bug fixes and contains improvements for showing images.<br>
+                I have invested a lot of my time in documentating the code. This is in preparation of the plugin and online services development documentation.
+                </p>
+
+
                 <h2>08/10/2008 ~ Data Crow 3.4.3 has been released</h2>
                 <p>
                 This release contains for the most part bug fixes but also some minor changes.</p>
