*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -59,7 +59,7 @@
                 to the resource editor (better UTF8 support and the ability to translate module names and fields).
                 Of course there are again the necessary bug fixes. Please note that a new version of the web module has been made available (1.2). This
                 version contains bug fixes and contains improvements for showing images.<br>
-                I have invested a lot of my time in documentating the code. This is in preparation of the plugin and online services development documentation.
+                I have invested a lot of my time in documenting the code. This is in preparation of the plugin and online services development documentation.
                 </p>
 
 
