*** empty log message ***

--- a/homepage/faq.html
+++ b/homepage/faq.html
@@ -60,20 +60,19 @@
 		If that didn't help at all it means you either you have no Java Runtime Environment
 		installed or Java is not correctly setup. If Java is not installed
 		go to <a href="http://www.java.com">the Java homepage</a> and download the latest version.
-		If Java is installed, type (in the folder where Data Crow is located) : java -jar &lt;filename&gt;
+		If Java is installed, type (in the folder where Data Crow is located): java -jar &lt;filename&gt;
 		</p>
-
-
+		
 		<h2>What is the "new" tab about?</h2>
 		<p>
-		The new item tab holds items eligble to be saved to the database. It's Data Crow waiting room.
+		The new item tab holds items eligible to be saved to the database. It's Data Crow waiting room.
 		Items found by services such as the Online Search and the import are put in this waiting room so you
 		can check and correct them. You can save them by pressing the "save" button.
 		</p>
 
-		<h2>I want to find non-english information</h2>
+		<h2>I want to find non English information</h2>
 		<p>
-		The Amazon online services allow for german and french texts to be found. When you use the online
+		The Amazon online services allow for German and French texts to be found. When you use the online
 		search, select an Amazon server (if available for the selected module) and the preferred language.
 		</p>
 
@@ -86,7 +85,7 @@
 		<p>
 		First of all the amount of memory used and the performance of the application is
 		for the largest part in the hands of the developer. Sloppy programming can kill any
-		product or service. ata Crow is a product which potentially deals with huge amounts of data and needs to present
+		product or service. Data Crow is a product which potentially deals with huge amounts of data and needs to present
 		this data in a nice way and fast. Given the type of product Data Crow's memory usage
 		is low and its performance is excellent.
 		</p>
