--- a/homepage/news.html
+++ b/homepage/news.html
@@ -53,19 +53,27 @@
 		</p>
 
 
-                <h2>20/12/2008 ~ Data Crow 3.4.4 has been released</h2>
-                <p>
-                The product has been translated to German (thanks to Klaus Lassleben) and Dutch. Improvements have been made
-                to the resource editor (better UTF8 support and the ability to translate module names and fields).
-                Of course there are again the necessary bug fixes. Please note that a new version of the web module has been made available (1.2). This
-                version contains bug fixes and contains improvements for showing images.<br>
-                I have invested a lot of my time in documenting the code. This is in preparation of the plugin and online services development documentation.
-                </p>
+        <h2>31/12/2008 ~ Data Crow 3.4.5 has been released</h2>
+        <p>
+        This version contains bug fixes for platform security issues. Data Crow did not detect whether the folder and file permissions
+        were set correctly. This could result in loss of data as information could not be written to the database. On startup Data Crow will check these
+        files for their permissions and report back to the user in case of problems.
+        </p>
 
 
-                <h2>08/10/2008 ~ Data Crow 3.4.3 has been released</h2>
-                <p>
-                This release contains for the most part bug fixes but also some minor changes.</p>
+        <h2>20/12/2008 ~ Data Crow 3.4.4 has been released</h2>
+        <p>
+        The product has been translated to German (thanks to Klaus Lassleben) and Dutch. Improvements have been made
+        to the resource editor (better UTF8 support and the ability to translate module names and fields).
+        Of course there are again the necessary bug fixes. Please note that a new version of the web module has been made available (1.2). This
+        version contains bug fixes and contains improvements for showing images.<br>
+        I have invested a lot of my time in documenting the code. This is in preparation of the plugin and online services development documentation.
+        </p>
+
+
+        <h2>08/10/2008 ~ Data Crow 3.4.3 has been released</h2>
+        <p>
+        This release contains for the most part bug fixes but also some minor changes.</p>
 
         <h2>02/10/2008 ~ Data Crow 3.4.2 has been released</h2>
         <p>
