*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -53,6 +53,15 @@
 		</p>
 
 
+        <h2>02/01/2009 ~ Data Crow 3.4.6 has been released</h2>
+        <p>
+        Due to the overwhelming response and complaints about having to set the DATACROW_HOME
+        directory or to supply the -dir: parameter I have decided to change this with this early
+        release. Oh, and there's something new as well; a French translation! Big thanks to
+        Pierre-Yves DANTEC!
+        </p>
+
+
         <h2>31/12/2008 ~ Data Crow 3.4.5 has been released</h2>
         <p>
         This version contains bug fixes for platform security issues. Data Crow did not detect whether the folder and file permissions
