*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -52,6 +52,11 @@
 			This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 		</p>
 
+        <h2>08/01/2009 ~ Data Crow 3.4.7 has been released</h2>
+        <p>
+        This release fixes the reporting functionality and contains fixes for other minor issues.
+        </p>
+
 
         <h2>02/01/2009 ~ Data Crow 3.4.6 has been released</h2>
         <p>
